[package]
name = "authtown"
version = "0.0.0"
edition = "2018"

[dependencies]
argon2 = "0.3"
cookie = "0.15"
hex = "0.4"
hmac = { version = "0.11", features = ["std"] }
hyper = { version = "0.14", features = ["http1", "runtime", "server"] }
serde = { version = "1", features = ["derive"] }
serde_urlencoded = "0.7"
slog = "2"
slog-async = "2"
slog-term = "2"
sha2 = "0.9"
thiserror = "1"
tera = { version = "1", default-features = false }
tokio = "1"
tokio-postgres = "0.7"
uuid = { version = "0.8", features = ["v4"] }
